--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 html {
+  padding: 1rem;
   box-sizing: border-box;
   font-size: 16px;
   font-family: Cascadia Code Pl, 'Courier New', Courier, monospace;
